프로젝트 세팅 변경

--- a/MetalRenderer/MetalRenderer/Base.lproj/Main.storyboard
+++ b/MetalRenderer/MetalRenderer/Base.lproj/Main.storyboard
@@ -707,11 +707,11 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="MetalRenderer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl" customClass="MTKView">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
                     <connections>
-                        <outlet property="metalView" destination="m2S-Jp-Qdl" id="bjx-Lj-L0u"/>
+                        <outlet property="metalView" destination="m2S-Jp-Qdl" id="7I9-B0-607"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
